--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
             font-family: 'Open Sans';
         }
 
-        .content {
-            margin: 1rem;
-        }
-
         .header {
             height: 25vh;
             text-align: center;
@@ -42,11 +38,15 @@
 
         .social-link {
             border-bottom: gray 1px solid;
-            padding: 1rem;
+        }
+
+        .social-link:hover {
+            background-color: rgb(211, 211, 211, 0.5);
         }
 
         .social-logo {
             vertical-align: middle;
+            padding: 2rem;
         }
 
         .social-logo img {
@@ -57,7 +57,8 @@
         .social-text {
             vertical-align: middle;
             display: inline-block;
-            padding-left: 1rem;;
+            padding-left: 1rem;
+            ;
         }
 
         a {
