--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-    <link rel="icon" href="assets/images/rcd_logo_white.svg">
+    <link rel="icon" href="assets/images/rcd_logo_white.svg" sizes="any" type="image/svg+xml">
+    <link rel="mask-icon" href="assets/images/rcd_logo.svg" color="white">
     <style>
         body {
             margin: 0;
@@ -20,6 +21,10 @@
             background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(to bottom, rgb(8, 8, 8), rgb(32, 32, 32));
             background-size: 100% 100%, 10px 10px, 10px 10px, 10px 5px;
             background-position: 0px 0px, 0px 0px, 5px 5px, 0px 0px;
+        }
+
+        .header img {
+            color: #fff;
         }
 
         .banner {
