--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         body {
             margin: 0;
             font-family: 'Open Sans';
+            font-size: 0.8em
         }
 
         .header {
-            height: 25vh;
+            /* height: 30vh; */
             text-align: center;
             background-color: rgb(32, 32, 32);
             background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 1)), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(to bottom, rgb(8, 8, 8), rgb(32, 32, 32));
             background-size: 100% 100%, 10px 10px, 10px 10px, 10px 5px;
             background-position: 0px 0px, 0px 0px, 5px 5px, 0px 0px;
+            padding-bottom: 2rem;
         }
 
         .header img {
@@ -34,7 +36,7 @@
         }
 
         .header-image {
-            height: 20vh;
+            height: 30vh;
         }
 
         .social-links {
@@ -51,11 +53,11 @@
 
         .social-logo {
             vertical-align: middle;
-            padding: 2rem;
+            padding: 1.5rem;
         }
 
         .social-logo img {
-            height: 4rem;
+            height: 3rem;
             vertical-align: middle;
         }
 
@@ -63,7 +65,6 @@
             vertical-align: middle;
             display: inline-block;
             padding-left: 1rem;
-            ;
         }
 
         a {
