new logo text and styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-    <link rel="icon" href="assets/images/rcd_logo_white.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="assets/images/rcd_logo_inverted.svg" sizes="any" type="image/svg+xml">
     <link rel="mask-icon" href="assets/images/rcd_logo.svg" color="white">
     <style>
         body {
@@ -23,10 +23,16 @@
             background-size: 100% 100%, 10px 10px, 10px 10px, 10px 5px;
             background-position: 0px 0px, 0px 0px, 5px 5px, 0px 0px;
             padding-bottom: 2rem;
+            color: white;
         }
 
         .header img {
             color: #fff;
+        }
+
+        .header-text {
+            padding-left: 2rem;
+            padding-right: 2rem;
         }
 
         .banner {
@@ -53,12 +59,12 @@
 
         .social-logo {
             vertical-align: middle;
-            padding: 1.5rem;           
+            padding: 1.5rem;
         }
 
         .social-logo img {
             height: 3rem;
-            vertical-align: middle;       
+            vertical-align: middle;
         }
 
         .social-text {
@@ -78,11 +84,16 @@
 
 <body>
     <div class="header">
-        <img src="assets/images/rcd_logo_white.svg" alt="rcd motorsport logo" class="header-image">
+        <img src="assets/images/rcd_logo_inverted.svg" alt="rcd motorsport logo" class="header-image">
+        <div class="header-text">
+            <h1>Welcome to RCD Motorsport</h1>
+            <h3>A professional driver training and development business founded by Ex McLaren Factory GT Driver Harry
+                Hayek</h3>
+        </div>
     </div>
     <div class="banner">
-        <h1>Connect with us on social media</h1>
-        <p>Follow us and get updates delivered to your favorite social media channel.</p>
+        <h1>Connect and join the RCD Motorsport team</h1>
+        <p>Follow us and get updates delivered to your favourite social media channel.</p>
     </div>
     <div class="content">
         <div class="social-links">
@@ -91,7 +102,7 @@
                     <div class="social-logo">
                         <img src="assets/images/rcd_logo.svg" alt="website logo" target="_blank">
                         <div class="social-text">
-                            Website
+                            <h2>Website</h2>
                         </div>
                     </div>
                 </div>
@@ -101,7 +112,7 @@
                     <div class="social-logo">
                         <img src="assets/images/f_logo_RGB-Blue_1024.svg" alt="facebook logo" target="_blank">
                         <div class="social-text">
-                            Facebook
+                            <h2>Facebook</h2>
                         </div>
                     </div>
                 </div>
@@ -111,7 +122,7 @@
                     <div class="social-logo">
                         <img src="assets/images/glyph-logo_May2016.svg" alt="instagram logo" target="_blank">
                         <div class="social-text">
-                            Instagram
+                            <h2>Instagram</h2>
                         </div>
                     </div>
                 </div>
